syntax = "proto3";

package world;

service WorldController {
    rpc createWorld (CreateWorldRequest) returns (CreateWorldResponse);
    rpc getWorld (GetWorldRequest) returns (GetWorldResponse);
}

message CreateWorldRequest {
    string name = 1;
    optional string description = 2;
    string userId = 3;
}

message CreateWorldResponse {
    string worldId = 1;
}

message GetWorldRequest {
    string worldId = 1;
}

message GetWorldResponse {
    World world = 1;
}

message World {
    string id = 1;
    string name = 2;
    optional string description = 3;
}